<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HoloReversi</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="start_single">1 Player</string>
    <string name="start_multi">2 Players</string>
    <string name="score">SCORE</string>
    <string name="num_zero">0</string>
    <string name="undo">UNDO</string>
    <string name="menu_title">Board Size</string>
    <string name="player_name_white">White</string>
    <string name="player_name_blue">Blue</string>
    <string name="player_won">" - WON!"</string>
    <string name="tie">Its a TIE nobody won</string>
    <string name="scoreBlack">Blue: %d</string>
    <string name="scoreWhite">White: %d</string>
    <string name="how_to_play">How to play?</string>
    <string name="menu_newgame">New Game</string>
    <string name="title_activity_history">Games History</string>
    <string name="history">History</string>
    <string name="no_games_in_history">No games in history</string>
    <string name="moves_num">Moves: %d</string>
    <string name="content_provider_permission">Content provider permission</string>

</resources>