<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/sizeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="4dip"
        android:layout_alignTop="@android:id/text1"
        android:src="@drawable/ic_board_4" />
    
    <TextView
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/sizeIcon"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="8dip"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:text="20:05, December 20"/>

    <TextView
        android:id="@android:id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/text1"
        android:layout_below="@android:id/text1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/moves_num" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@android:id/text2"
        android:layout_below="@android:id/text1"
        android:paddingLeft="8dip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/scoreBlack" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text3"
        android:layout_below="@android:id/text1"
        android:paddingLeft="8dip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/scoreWhite" />



</RelativeLayout>